--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,11 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
 
+#root {
+  width: 100%;
+  overflow-x: hidden; /* Handle horizontal overflow here */
+}
+
 
 *, *::before, *::after {
   box-sizing: border-box;
@@ -12,8 +17,6 @@ body {
   margin: 0;
   color: black;
   overflow-x: hidden;
-  overflow-y: auto;
-  width: 100%;
 }
 
 html{
