--- a/src/port.css
+++ b/src/port.css
@@ -39,6 +39,11 @@ header {
     list-style: none;
     margin: 0;
     padding: 0;
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 70%;
+    height: 100dvh;
 }
 
 .nav-links li {
